| 6

- Fix errors during parameter checks;
- Use susinfo more;
- Update help screen;

| 5

- Fix version number not being updated;

| 4

- Fix wrong license notice type being used;

| 3

- Add message to static assertion in main;
- Fix license notices saying 'GNU General Public License' instead of 'GNU Affero General Public License';

| 2

- Fix indentations;
- Remove useless constant in calc;

| 1

- Use typeof instead of typeof_unqual;
- Use CHAR_WIDTH instead of CHAR_BIT;

| 0

- Initial;